--- a/src/app/controlEquipos/asignacion-list/asignacion-list.component.html
+++ b/src/app/controlEquipos/asignacion-list/asignacion-list.component.html
@@ -1,13 +1,15 @@
 <h2 class="text-center mt-3 mb-3 bi bi-arrow-left-right"> Asignaciones</h2>
 
+<app-loading [loading]="loading"></app-loading>
+
 
 <div class="search-container m-3">
   <label for="searchEquipo">Buscar por Equipo:</label>
-  <input type="text" id="searchEquipo" name="searchEquipo" [(ngModel)]="searchEquipo" (keyup.enter)="buscarPorEquipo()" placeholder="Ingrese modelo de equipo">
-  <button type="button" class="btn btn-primary bi bi-search" (click)="buscarPorEquipo()"></button>
+  <input type="text" [formControl]="searchControl" placeholder="Buscar por número de serie..." />
   <button type="button" class="btn btn-secondary" (click)="cargarAsignaciones()">Mostrar Todos</button>
 </div>
-
+<!-- Botón para descargar PDF de asignaciones -->
+   <button class="btn btn-warning m-3 bi bi-file-earmark-arrow-down-fill" (click)="descargarPdf()"> Reporte General</button>
 
 <div class="d-flex justify-content-between align-items-start">
 
@@ -20,8 +22,7 @@
  <div>
    <!-- Botón para alternar orden -->
    <button class="btn btn-secondary bi bi-arrow-down-up m-3" (click)="alternarOrden()"></button>
-    <!-- Botón para descargar PDF de asignaciones -->
-   <button class="btn btn-warning m-3 bi bi-file-earmark-arrow-down-fill" (click)="descargarPdf()"> Reporte</button>
+    
    <!-- Botón para ir al Dashboard -->
    <button class="btn btn-primary m-3 bi bi-house-fill" (click)="irAlDashboard()"> Inicio</button>
    <!-- Botón para cerrar sesión -->
@@ -46,27 +47,35 @@
   </div>
 </div>
 
+<!-- Spinner de carga -->
+ <div *ngIf="!loading">
 <table class="table table-striped m-3">
   <thead>
     <tr>
       <th>Equipo</th>
       <th>Personal</th>
-      <th>Licencias</th>
+    <!--   <th>Licencias</th>-->
    <!--   <th>Ubicación Física</th>-->
-      <th>Nombre Equipo</th>
+      <th>Equipo</th>
   <!--    <th>contraseña</th>-->
   <!--    <th>Evidencia de asignación</th>-->
    <!--   <th>Fecha de asignación</th>-->
   <!--    <th>Fecha de finalizacion</th>-->
   <!--    <th>Comentarios</th>-->
       <th>Acciones</th>
+      <th>Reportes</th>
     </tr>
   </thead>
   <tbody class="table-group-divider">
     <tr *ngFor="let asignacion of asignacionList">
-      <td>{{ asignacion.equipo?.modelo }}</td>
-      <td>{{ getPersonalNames(asignacion) }}</td>
-      <td>{{ getLicenciaNames(asignacion) }}</td>
+      <td>
+        {{ asignacion.equipo?.numeroSerie }} - 
+        {{ asignacion.equipo?.modelo }} -
+        {{ asignacion.equipo?.tipo}}- 
+        {{ asignacion.equipo?.color }}
+      </td>
+      <td>{{ getPersonalName(asignacion) }}</td>
+    <!--   <td>{{ getLicenciaNames(asignacion) }}</td>-->
     <!--  <td>{{ asignacion.ubicacionFisica }}</td>-->
       <td>{{ asignacion.nombreEquipo }}</td>
    <!--     <td>{{ asignacion.contrasena }}</td>-->
@@ -77,12 +86,27 @@
       <td>
         <button *ngIf="isAdminOrModerador"  class="btn btn-info me-3" (click)="abrirModalEditar(asignacion)"><i class="bi bi-pencil"></i></button>
         <button *ngIf="isAdmin"  class="btn btn-danger me-3" (click)="asignacion.id && eliminarAsignacion(asignacion.id)"><i class="bi bi-trash"></i></button>
-        <button class="btn btn-primary" (click)="abrirModalVer(asignacion)"><i class="bi bi-eye"></i></button>
+        <button class="btn btn-primary me-3" (click)="abrirModalVer(asignacion)"><i class="bi bi-eye"></i></button>
+      </td>  
+
+      <td>
+        <button
+        class="btn btn-warning me-3 bi bi-pc-display-horizontal"
+        (click)="descargarReporteAsignacionesPorEquipo(asignacion)"
+        [disabled]="!asignacion.equipo?.id"> <!-- Deshabilita si no hay equipo o ID -->
+      </button>
+
+      <button
+    class="btn btn-dark me-3 bi bi-file-earmark-person-fill"
+    (click)="descargarReporteAsignacionesPorPersonal(asignacion)"
+    [disabled]="!asignacion.personal?.id"> <!-- Deshabilita si no hay personal o ID -->
+    </button>
+
       </td>
     </tr>
   </tbody>
 </table>
-
+</div>
 
 <!-- Modal para agregar o editar asignación -->
 <div *ngIf="isModalVisible" class="modal">
@@ -94,20 +118,36 @@
         <!-- Select para Equipo -->
         <label for="equipo">Equipo:</label>
         <select class="custom-select" [(ngModel)]="selectedAsignacion.equipo" name="equipo">
-          <option *ngFor="let equipo of equipoList" [ngValue]="equipo">{{ equipo.modelo }}</option>
+          <option *ngFor="let equipo of equipoList" [ngValue]="equipo">
+            {{ equipo.numeroSerie }} - {{ equipo.modelo }} - {{equipo.tipo}} - {{ equipo.color }}
+          </option>
         </select>
   
-        <!-- Select múltiple para Personal -->
-        <label for="personal">Personal:</label>
-        <select class="custom-select" [(ngModel)]="selectedAsignacion.personal" name="personal" multiple>
-          <option *ngFor="let personal of personalList" [ngValue]="personal">{{ personal.nombre }}</option>
-        </select>
+        <!-- Select simple para Personal -->
+<label for="personal">Personal:</label>
+<select class="custom-select" [(ngModel)]="selectedAsignacion.personal" name="personal">
+  <option *ngFor="let personal of personalList" [ngValue]="personal">
+    {{ personal.nombre }}
+  </option>
+</select>
   
         <!-- Select múltiple para Licencias -->
-        <label for="licencias">Licencias:</label>
-        <select class="custom-select" [(ngModel)]="selectedAsignacion.licencias" name="licencias" multiple>
-          <option *ngFor="let licencia of licenciaList" [ngValue]="licencia">{{ licencia.nombreLicencia }}</option>
-        </select>
+        <!-- HTML -->
+<label for="licencias">Licencias:</label>
+<div class="custom-multiselect">
+  <select class="custom-select" [(ngModel)]="selectedAsignacion.licencias" name="licencias" multiple>
+    <option *ngFor="let licencia of licenciaList" [ngValue]="licencia">{{ licencia.nombreLicencia }}</option>
+  </select>
+  <div class="selected-items">
+    <span class="selected-tag" *ngFor="let item of selectedAsignacion.licencias">
+      {{ item.nombreLicencia }}
+      <span class="remove-tag" (click)="removeItem(item)">×</span>
+    </span>
+    <span class="placeholder" *ngIf="!selectedAsignacion.licencias || selectedAsignacion.licencias.length === 0">
+      Seleccione las licencias...
+    </span>
+  </div>
+</div>
   
         <!-- Otros campos del formulario -->
         <label for="ubicacionFisica">Ubicación Física:</label>
@@ -146,9 +186,9 @@
   <div class="modal-content">
     <span class="close" (click)="cerrarModalVer()">&times;</span>
     <h3 class="text-center">Detalles de las asignaciones</h3>
-    <p><strong>Equipo:</strong> {{ selectedAsignacion?.equipo?.modelo }}</p>
+    <p><strong>Equipo:</strong> {{ selectedAsignacion?.equipo?.numeroSerie && selectedAsignacion?.equipo?.modelo  }}</p>
     <p><strong>No. de serie del equipo:</strong> {{ selectedAsignacion?.equipo?.numeroSerie }}</p>
-    <p><strong>Personal:</strong> {{ selectedAsignacion ? getPersonalNames(selectedAsignacion) : '' }}</p>
+    <p><strong>Personal:</strong> {{ selectedAsignacion ? getPersonalName(selectedAsignacion) : '' }}</p>
     <p><strong>Licencias:</strong> {{ selectedAsignacion ? getLicenciaNames(selectedAsignacion) : '' }}</p>
     <p><strong>Ubicación Física:</strong> {{ selectedAsignacion?.ubicacionFisica }}</p>
     <p><strong>Nombre Equipo:</strong> {{ selectedAsignacion?.nombreEquipo }}</p>
