--- a/src/app/controlEquipos/equipo-list/equipo-list.component.html
+++ b/src/app/controlEquipos/equipo-list/equipo-list.component.html
@@ -1,12 +1,16 @@
 <h2 class="text-center mt-3 mb-3 bi bi-laptop"> Equipos</h2>
 
 
-
+<!-- Spinner de carga -->
+<app-loading [loading]="loading"></app-loading>
 
 <div class="search-container m-3">
-    <label for="searchInput">Buscar por Número de Serie:</label>
-    <input type="text" id="searchInput" name="searchInput" [(ngModel)]="searchInput" (keyup.enter)="buscarEquipo()" placeholder="Ingrese el número de serie">
-    <button type="button" class="btn btn-primary bi bi-search" (click)="buscarEquipo()"></button>    
+ <label for="searchControlInput">Buscar por Número de Serie:</label>
+  <input type="text" [formControl]="searchControl" placeholder="Buscar por serie.." />
+
+
+
+     
     <button type="button" class="btn btn-secondary" (click)="cargarEquipos()">Ver Todos</button> 
   </div>
 
@@ -45,6 +49,8 @@
   </div>
 </div>
 
+<!-- Spinner de carga -->
+ <div *ngIf="!loading">
 <table class="table table-striped m-3 ">
   <thead>
     <tr>
@@ -91,13 +97,14 @@
     </tr>
   </tbody>
 </table>
+</div>
 <!------------------------------------------ Modal-------------------------------- -->
 <div *ngIf="isModalVisible" class="modal">
     <div class="modal-content">
       <span class="close" (click)="cerrarModal()">×</span>
       <h3>{{ isEditMode ? 'Editar Equipo' : 'Agregar Equipo' }}</h3>
   
-      <form (ngSubmit)="guardarEquipo()" *ngIf="selectedEquipo">
+      <form (ngSubmit)="guardarEquipo()" enctype="multipart/form-data" *ngIf="selectedEquipo" >
         <input type="hidden" [(ngModel)]="selectedEquipo.id" name="id">
         
         
@@ -106,7 +113,6 @@
           <input type="text" id="numeroSerie" name="numeroSerie" [(ngModel)]="selectedEquipo.numeroSerie" required>
         </div>
 
-        
         
         <div>
           <label for="tipo">Tipo:</label>
@@ -138,8 +144,12 @@
           <input type="number" id="ram" name="ram" [(ngModel)]="selectedEquipo.ram" required>
         </div>
         <div>
-          <label for="almacenamiento">Almacenamiento (GB):</label>
-          <input type="number" id="almacenamiento" name="almacenamiento" [(ngModel)]="selectedEquipo.almacenamiento" required>
+          <label for="almacenamiento">HDD (GB):</label>
+          <input type="number" id="almacenamientoHDD" name="almacenamientoHDD" [(ngModel)]="selectedEquipo.hdd" required>
+        </div>
+        <div>
+          <label for="almacenamiento">SDD (GB):</label>
+          <input type="number" id="almacenamientoSDD" name="almacenamientoSDD" [(ngModel)]="selectedEquipo.sdd" required>
         </div>
         <div>
           <label for="estado">Estado:</label>
@@ -169,7 +179,17 @@
           </div>
         </div>
 
-     
+         <!-- Image Upload Field - Only visible if the user can upload images (e.g., Admin or Moderador) -->
+         <div class="form-group" *ngIf="isAdminOrModerador">
+          <label for="imagenFile">Imagen:</label>
+          <input type="file" id="imagenFile" (change)="onFileSelected($event)" accept="image/*" class="form-control">
+         </div>
+
+         <!-- Image Preview (Optional) -->
+         <div *ngIf="imagenPreview" class="form-group image-preview-container">
+             <label class="form-label">Previsualización:</label>
+             <img [src]="imagenPreview" alt="Imagen seleccionada" class="img-preview">
+         </div>
   
         
         <div class="buttons">
@@ -193,7 +213,8 @@
     <p><strong>Color:</strong> {{ selectedEquipo?.color }}</p>
     <p><strong>Procesador:</strong> {{ selectedEquipo?.procesador }}</p>
     <p><strong>RAM:</strong> {{ selectedEquipo?.ram}} GB</p>
-    <p><strong>Almacenamiento</strong> {{ selectedEquipo?.almacenamiento }} GB</p>
+    <p><strong>Almacenamiento de HDD</strong> {{ selectedEquipo?.hdd }} GB</p>
+    <p><strong>Almacenamiento de SDD</strong> {{ selectedEquipo?.sdd }} GB</p>
     <p><strong>Estado:</strong> {{ selectedEquipo?.estado }}</p>
     <p><strong>Fecha de Compra:</strong> {{ selectedEquipo?.fechaCompra }}</p>
     <p><strong>Puertos:</strong> </p>
@@ -208,6 +229,14 @@
         <span *ngIf="getPuertosList(selectedEquipo).length === 0">Sin puertos</span>
       </span>
     </p>
+    <p><strong>Imagen</strong></p>
+<div *ngIf="selectedEquipo?.imagenUrl">
+<p>Imagen disponible</p>
+ <button (click)="cargarImagen()"  type="button" class="btn btn-secondary">Ver imagen</button>
+<img *ngIf="imagenPreview" [src]="imagenPreview" alt="..."  class="img-fluid">
+</div>
+     
+    <p *ngIf="!selectedEquipo?.imagenUrl">No hay imagen disponible</p>
   </div>
 </div>
 
