--- a/src/app/controlEquipos/loading/loading.component.html
+++ b/src/app/controlEquipos/loading/loading.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="loading" class="loading-overlay">
-    <div class="spinner"></div>
-    <p>Cargando, por favor espera...</p>
-  </div>
-  
+<div *ngIf="loading" class="loading-overlay" role="status" aria-live="polite">
+  <div class="spinner"></div>
+  <p>Cargando, por favor espera...</p>
+</div>
+
